[package]
name = "forge"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast, safe image flasher for SD cards and USB drives."
readme = "README.md"
repository = "https://github.com/sskartheekadivi/forge"
keywords = ["flasher", "usb", "sdcard", "image", "cli"]
categories = ["command-line-utilities", "hardware-support"]

[dependencies]
clap = { version = "4.5.43", features = ["derive"] }
anyhow = "1.0"
console = "0.16.0"
indicatif = "0.18.0"
libc = "0.2.174"
sha2 = "0.10.9"
nix = { version = "0.30.1", features = ["ioctl"] }

[package.metadata.deb]
maintainer = "Sai Sree Kartheek Adivi <sskartheekadivi@gmail.com>"
